[tool.poetry]
name = "mystreamlittest"
version = "0.1.0"
description = ""
authors = ["apoptose <nicbra93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.2.0"
importlib-resources = "^5.4.0"
pyarrow = "^7.0.0"
pytube = "^12.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
